[tool.poetry]
name = "aaa-py"
version = "0.1.0"
description = ""
authors = ["Will Vousden <152388+willvousden@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "aaa"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
gpxpy = "^1.5.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
