[project]
name = "aaa-py"
version = "0.1.0"
description = ""
authors = [
    {name = "Will Vousden", email = "152388+willvousden@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.2,<2.0",
    "matplotlib>=3.7.1,<4.0",
    "gpxpy>=1.5.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.3.0,<24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["aaa.py"]
