[project]
name = "aaa-py"
version = "0.1.0"
description = ""
authors = [
    {name = "Will Vousden", email = "152388+willvousden@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.3.4",
    "matplotlib>=3.10.7,<4.0",
    "gpxpy>=1.6.2,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["aaa.py"]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
]
